# object-centric-hierarchical-bottleneck

./: .gitignore  configs.json  configs_disentangle.json  encode_data.py  eval.py  eval_module.py  eval_pipeline.py  eval_rollout.py  modules.py  pyproject.toml  readme.md  requirements.in  requirements.txt  sswm_configs.json  train.py  utils.py
configs/: 12-08-3.toml  4F.json  4F_new.json  SA.toml  SA_contr_attn.toml  SA_contrastive.toml  SA_contrastive_attn.toml  explicit_latents.toml  explicit_latents_disent.toml  full2.json  implicit_dynamics.toml  test.json
data_gen/: physics.py
disentangle/: eval.py  latent_AE.py  train.py
envs/: physics_sim.py
explicit_latents/: autoencoder.py  eval.py  save_latents.py  train.py
implicit_latents/: autoencoder.py  train.py
scripts/: smoke_test.py
slot_attention/: AE.py  autoencoder.py  disentangled_AE.py  display_reconstructions.py  eval.py  evaluate.py  grid_search_results.py  latent_AE.py  param_optimization.py  save_slots.py  slot_attention.py  train.py  utils.py
slot_attention(old)/: eval.py  latent_AE.py
src/: datasets.py  encode_data.py  eval.py  eval_module.py  eval_pipeline.py  eval_rollout.py  explicit_AE.py  factory.py  io_utils.py  losses.py  match.py  math_utils.py  npy_to_h5py.py  properties.py  relational_latent_dynamics.py  slot_attention_AE.py  stitch_h5.py  train.py  train_classes.py  utils.py  visualization.py
src/explicit_latents/: autoencoder.py  eval.py  save_latents.py  train.py  train_full.py
src/implicit_latents/: autoencoder.py  eval.py  eval_dynamics.py  eval_rollout.py  train.py  (+1 more)
(+11 files in other folders)
